--- a/Web/ResellTicketSolution/WebClient.Customer/ResetPassword.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/ResetPassword.html
@@ -76,7 +76,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<div class="head-t">
 			<ul class="card">
 				<li><a href="login.html" ><i class="fa fa-user" aria-hidden="true"></i>Login</a></li>
-				<li><a href="register.html" ><i class="fa fa-arrow-right" aria-hidden="true"></i>Register</a></li>
+				<li><a href="ResetPassword.html" ><i class="fa fa-arrow-right" aria-hidden="true"></i>Reset Password</a></li>
 			</ul>	
 		</div>
 		
@@ -113,15 +113,15 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<div class="clearfix"></div>
 			</div>
 				
-		</div>			
+			</div>			
 </div>
 <!---->
 
      <!--banner-->
 <div class="banner-top">
 	<div class="container">
-		<h3 >Register</h3>
-		<h4><a href="index.html">Home</a><label>/</label>SendOTP<label>/</label>Register</h4>
+		<h3 >ResetPassword</h3>
+		<h4><a href="index.html">Home</a><label>/.../</label>ResetPassword</h4>
 		<div class="clearfix"> </div>
 	</div>
 </div>
@@ -131,26 +131,8 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<div class="login">
 		<div class="main-agileits">
 				<div class="form-w3agile form1">
-					<h3>Register</h3>
+					<h3>ResetPassword</h3>
 					<form action="#" method="post">
-						<label>User Name:</label>
-						<div class="key">
-							<i class="fa fa-user" aria-hidden="true"></i>
-							<input  type="text" value="Username" name="Username" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Username';}" required="">
-							<div class="clearfix"></div>
-						</div>
-						<label>Email:</label>
-						<div class="key">
-							<i class="fa fa-envelope" aria-hidden="true"></i>
-							<input  type="text" value="Email" name="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
-							<div class="clearfix"></div>
-						</div>
-						<label>OTP Code:</label>
-						<div class="key">
-							<i class="fa fa-pinterest-p" aria-hidden="true"></i>
-							<input  type="text" value="OPTCode" name="OPTCode" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'OTPCode';}" required="">
-							<div class="clearfix"></div>
-						</div>
 						<label>Password:</label>
 						<div class="key">
 							<i class="fa fa-lock" aria-hidden="true"></i>
@@ -163,7 +145,14 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 							<input  type="password" value="Confirm Password" name="Confirm Password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Confirm Password';}" required="">
 							<div class="clearfix"></div>
 						</div>
-						<input type="submit" value="Register">
+						<label>OTP Code:</label>
+						<div class="key">
+							<i class="fa fa-pinterest-p" aria-hidden="true"></i>
+							<input  type="text" value="OPTCode" name="OPTCode" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'OTPCode';}" required="">
+							<div class="clearfix"></div>
+						</div>
+							<input type="submit" value="Reset Password" />
+						 </a>
 					</form>
 				</div>
 				
