--- a/Web/ResellTicketSolution/WebClient.Customer/index.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/index.html
@@ -65,15 +65,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		});
 	</script>
 	<!---//End-rate---->
-	<script type="text/javascript">
-		function checkLogin(){
-			var username = localStorage.getItem('USERNAME');
-			var isLoggin = document.getElementById("isLoggin");
-			if(username !== null){
-				isLoggin.style.display = 'none';
-			}
-		}
-	</script>
+	<script type="text/javascript" src="js/authen.js"></script>
 </head>
 
 <body onload="checkLogin()">
