Update Profile and change password!!

--- a/Web/ResellTicketSolution/WebClient.Customer/register.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/register.html
@@ -265,8 +265,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					alertInvalid.style.display = 'block';
 				} else {
 					alertInvalid.style.display = 'none';
-					console.log("Ok register");
-					//window.location.href = 'login.html';
+					window.location.href = 'login.html';
 				}
 			} else {
 				alert("Enter all field please!!!")
