--- a/Web/ResellTicketSolution/WebClient.Customer/login.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/login.html
@@ -190,6 +190,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				console.log("responeData: ", responeData.token);
 				localStorage.setItem('USERNAME', responeData.username);
 				localStorage.setItem('TOKEN', responeData.token);
+				localStorage.setItem('PHONENUMBER', responeData.phoneNumber);
 				window.location.href = 'index.html';
 			}
 		}
