fix all bug comment in freecamp RT-059

--- a/Web/ResellTicketSolution/WebClient.Customer/ResetPassword.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/ResetPassword.html
@@ -94,6 +94,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			max-width: 400px;
 		}
 	</style>
+	<script type="text/javascript" src="constant/BasrUrl.js"></script>
 </head>
 
 <body>
@@ -168,7 +169,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<script type="text/javascript">
 		function checkValidPassword() {
 			var txtPassword = document.getElementsByName("txtPassword")[0].value;
-			var patt = /^[a-zA-Z0-9]{10,100}$/;
+			var patt = /^[a-zA-Z0-9]{6,100}$/;
 			var passwordAlert = document.getElementById("password-alert");
 			if (patt.test(txtPassword)) {
 				passwordAlert.style.display = 'none';
@@ -220,7 +221,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			};
 
 			if ( checkValidPassword() && checkConfirmPassword() && checkValidOTP()) {
-				var respone = await fetch('http://localhost:59152/api/customer/reset-password', {
+				var respone = await fetch(baseUrl() + 'api/customer/reset-password', {
 					method: "POST",
 					headers: {
 						'Accept': 'application/json',
@@ -228,10 +229,10 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					},
 					body: JSON.stringify(data)
 				});
-				if (respone.status === 406) {
+				if (respone.status === 400) {
 					alertExpired.style.display = 'none';
 					alertInvalid.style.display = 'block';
-				} else if(respone.status === 400){
+				} else if(respone.status === 406){
 					alertExpired.style.display = 'block';
 					alertInvalid.style.display = 'none';
 				} else {
@@ -257,7 +258,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 						<div class="clearfix"></div>
 					</div>
 					<div id="password-alert" style="display: none" class="alert alert-danger" role="alert">
-						Please enter a valid password !!! More than 10 digits please!!
+						Please enter a valid password !!! More than 6 digits please!!
 					</div>
 					<label>Confirm Password:</label>
 					<div class="key">
