--- a/Web/ResellTicketSolution/WebClient.Customer/changePasswordProfile.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/changePasswordProfile.html
@@ -83,6 +83,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
         }
     </style>
     <script type="text/javascript" src="js/authen.js"></script>
+    <script type="text/javascript" src="constant/BasrUrl.js"></script>
 </head>
 
 <body onload="checkLoginProfile();checkLogin()">
@@ -189,7 +190,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
         function checkValidPassword() {
             var txtPassword = document.getElementsByName("txtPassword")[0].value;
             console.log("password", txtPassword);
-            var patt = /^[a-zA-Z0-9]{10,100}$/;
+            var patt = /^[a-zA-Z0-9]{6,100}$/;
             var passwordAlert = document.getElementById("password-alert");
             console.log("test", patt.test(txtPassword));
             if (patt.test(txtPassword)) {
@@ -203,7 +204,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 
         function checkValidCurrentPassword() {
             var txtCurrentPassword = document.getElementsByName("txtCurrentPassword")[0].value;
-            var patt = /^[a-zA-Z0-9]{10,100}$/;
+            var patt = /^[a-zA-Z0-9]{6,100}$/;
             var passwordAlert = document.getElementById("current-alert");
             if (patt.test(txtCurrentPassword)) {
                 passwordAlert.style.display = 'none';
@@ -227,7 +228,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
             };
             //console.log("fun", checkValidEmail());
             if (checkValidCurrentPassword() && checkValidPassword() && checkConfirmPassword()) {
-                var respone = await fetch('http://localhost:59152/api/customer/change-password', {
+                var respone = await fetch(baseUrl() + 'api/customer/change-password', {
                     method: "PUT",
                     headers: {
                         'Accept': 'application/json',
@@ -270,7 +271,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
                         <div class="clearfix"></div>
                     </div>
                     <div id="password-alert" style="display: none" class="alert alert-danger" role="alert">
-                        Please enter a valid password !!! More than 9 digits !!!
+                        Please enter a valid password !!! More than 6 digits !!!
                     </div>
                     <label>Confirm Password:</label>
                     <div class="key">
