--- a/Web/ResellTicketSolution/WebClient.Customer/ForgotPassword.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/ForgotPassword.html
@@ -94,6 +94,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			max-width: 400px;
 		}
 	</style>
+	<script type="text/javascript" src="constant/BasrUrl.js"></script>
 </head>
 
 <body>
@@ -168,7 +169,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<script type="text/javascript">
 		function checkValidPhone() {
 			var txtPhone = document.getElementsByName("txtPhone")[0].value;
-			var mobilePattern = /^[0-9]{10}$/;
+			var mobilePattern = /^[0-9]{10,15}$/;
 			var aletForm = document.getElementById("form-messages");
 			var alertText = document.getElementById("alert-text");
 			if (mobilePattern.test(txtPhone)) {
@@ -189,7 +190,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				var data = {
 					phoneNumber: txtPhone
 				}
-				var respone = await fetch('http://localhost:59152/api/customer/forget-password', {
+				var respone = await fetch(baseUrl() + 'api/customer/forget-password', {
 					method: "POST",
 					headers: {
 						'Accept': 'application/json',
