--- a/Web/ResellTicketSolution/WebClient.Customer/register.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/register.html
@@ -82,6 +82,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			color: #999;
 		}
 	</style>
+	<script type="text/javascript" src="constant/BasrUrl.js"></script>
 </head>
 
 <body>
@@ -168,7 +169,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 
 		function checkValidUsername() {
 			var txtUsername = document.getElementsByName("txtUsername")[0].value;
-			var patt = /^[a-zA-Z0-9]{10,20}$/;
+			var patt = /^[a-zA-Z0-9]{6,30}$/;
 			var usernameAlert = document.getElementById("username-alert");
 			if (patt.test(txtUsername)) {
 				usernameAlert.style.display = 'none';
@@ -181,7 +182,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 
 		function checkValidPassword() {
 			var txtPassword = document.getElementsByName("txtPassword")[0].value;
-			var patt = /^[a-zA-Z0-9]{10,100}$/;
+			var patt = /^[a-zA-Z0-9]{6,100}$/;
 			var passwordAlert = document.getElementById("password-alert");
 			if (patt.test(txtPassword)) {
 				passwordAlert.style.display = 'none';
@@ -194,7 +195,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 
 		function checkValidFullname() {
 			var txtFullname = document.getElementsByName("txtFullname")[0].value;
-			var patt = /^[a-zA-Z ]{10,100}$/;
+			var patt = /^[a-zA-Z ]{6,100}$/;
 			var fullnameAlert = document.getElementById("fullname-alert");
 			if (patt.test(txtFullname)) {
 				fullnameAlert.style.display = 'none';
@@ -208,7 +209,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		function checkValidEmail() {
 			var txtEmail = document.getElementsByName("txtEmail")[0].value;
 			console.log("email: ", txtEmail);
-			var patt = /[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+.[a-zA-Z]{2,4}/;
+			var patt = /^[a-z0-9_\.]{5,32}@[a-z0-9]{2,}.[a-z0-9]{2,}$/;
 			var emailAlert = document.getElementById("email-alert");
 			console.log("is email: ", patt.test(txtEmail));
 			if (patt.test(txtEmail)) {
@@ -253,7 +254,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			};
 			//console.log("fun", checkValidEmail());
 			if (checkValidUsername() && checkValidFullname() && checkValidEmail() && checkValidOTP() && checkValidPassword() && checkConfirmPassword()  ) {
-				var respone = await fetch('http://localhost:59152/api/customer', {
+				var respone = await fetch(baseUrl() + 'api/customer', {
 					method: "POST",
 					headers: {
 						'Accept': 'application/json',
@@ -285,7 +286,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 						<div class="clearfix"></div>
 					</div>
 					<div id="username-alert" style="display: none" class="alert alert-danger" role="alert">
-						Username must have 10 - 20 degits!!
+						Username must have 6 - 30 digits!!
 					</div>
 
 					<label>Full Name:</label>
@@ -295,7 +296,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 						<div class="clearfix"></div>
 					</div>
 					<div id="fullname-alert" style="display: none" class="alert alert-danger" role="alert">
-						Full name must have 10 - 100 degits!!
+						Full name must have 6 - 100 digits!!
 					</div>
 
 					<label>Email:</label>
