RT-060: View Posted Ticket (Web Customer)

--- a/Web/ResellTicketSolution/WebClient.Customer/login.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/login.html
@@ -202,7 +202,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<h3>Login</h3>
 				<form>
 					<ul id="form-messages">
-						<span>Invalid Usernam or Password!!!</span>
+						<span>Invalid Username or Password!!!</span>
 					</ul>
 					<label>ID:</label>
 					<div class="key">
