--- a/Web/ResellTicketSolution/WebClient.Customer/updateProfile.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/updateProfile.html
@@ -134,11 +134,11 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
                         <h4>Welcome <span id="welcome-name"></span>!!!</h4>
                     </li>
                     <li>
-                        <h4><a href="index.html"><i class="fa fa-key" aria-hidden="true"></i>Home</a>
+                        <h4><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a>
                         </h4>
                     </li>
                     <li>
-                        <h4><a onclick="logout()" href="index.html"><i class="fa fa-key"
+                        <h4><a onclick="logout()" href="index.html"><i class="fa fa-sign-out"
                                     aria-hidden="true"></i>Logout</a></h4>
                     </li>
                 </ul>
@@ -173,8 +173,12 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
                     </div>
                     <div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
                         <ul class="nav navbar-nav ">
-                            <li class="active"><a href="index.html" class="hyper "><span>Route</span></a></li>
-                            <li><a href="codes.html" class="hyper"> <span>Tour</span></a></li>
+                            <li class="active"><a href="updateProfile.html" class="hyper"><span>Profile</span></a></li>
+                            <li><a href="./postedTicket/postedTicket.html" class="hyper"><span>My Tickets</span></a></li>
+                            <li><a href="#" class="hyper"><span>My Routes</span></a></li>
+                            <li><a href="#" class="hyper"> <span>My Tours</span></a></li>
+                            <li><a href="#" class="hyper"> <span>Credit Card</span></a></li>
+                            <li><a href="#" class="hyper"> <span>Transactions</span></a></li>
                         </ul>
                     </div>
                 </nav>
