--- a/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postedTicket.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postedTicket.html
@@ -1,9 +1,4 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
+
 <!DOCTYPE html>
 <html>
 
@@ -22,11 +17,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
     <!-- js -->
     <!-- Load React. -->
-    <!-- <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
-    <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.30.5/react-bootstrap.js"></script> -->
-    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    <!-- <script src="../js/react-router-dom.min.js"></script> -->
+    <script src="../js/react.development.js" crossorigin></script>
+    <script src="../js/react-dom.development.js" crossorigin></script>
+    
     <script src="../js/babel.min.js"></script>
     <!-- Load React. -->
 
@@ -35,9 +29,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <script src="../js/moment.js"></script>
     <script src="../js/bootstrap.js"></script>
     <script src="../helper/convertStatus.js"></script>
+    <script src="../js/numeral.min.js"></script>
     <!-- //js -->
 </head>
 <script src="./postedTicket.js" type="text/babel"></script>
+<script src="../helper/Api.js"></script>
 
 <body onload="getPostedTicket()">
     <div class="header">
