--- a/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postedTicket.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postedTicket.html
@@ -54,7 +54,7 @@
                         </h4>
                     </li>
                     <li>
-                        <h4><a onclick="logout()" href="index.html"><i class="fa fa-sign-out"
+                        <h4><a onclick="logout()" href="../index.html"><i class="fa fa-sign-out"
                                     aria-hidden="true"></i>Logout</a></h4>
                     </li>
                 </ul>
