--- a/Web/ResellTicketSolution/WebClient.Customer/login.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/login.html
@@ -205,10 +205,10 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					<ul id="form-messages">
 						<span>Invalid Username or Password!!!</span>
 					</ul>
-					<label>ID:</label>
+					<label>Username or Phone:</label>
 					<div class="key">
 						<i class="fa fa-phone" aria-hidden="true"></i>
-						<input type="text" name="username" type="hidden" placeholder="Phone or Username" />
+						<input type="text" name="username" type="hidden" placeholder="Username or Phone" />
 						<div class="clearfix"></div>
 					</div>
 					<label>Password:</label>
