--- a/Web/ResellTicketSolution/WebClient.Customer/index.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/index.html
@@ -15,16 +15,35 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 	<link href="css/style.css" rel='stylesheet' type='text/css' />
 	<link href="css/font-awesome.css" rel="stylesheet">
-	<!-- <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-	<link href='//fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'> -->
-	<!-- <link rel="stylesheet" href="css/jstarbox.css" type="text/css" media="screen" charset="utf-8" /> -->
 	<link href="css/rt-style.css" rel='stylesheet' type='text/css' />
+	<link rel="manifest" href="/manifest.json">
 	<!-- css -->
 
 	<!-- js -->
 	<script src="js/jquery-1.11.1.min.js"></script>
 	<script src="js/jstarbox.js"></script>
 	<script type="text/javascript" src="js/authen.js"></script>
+	<script src="js/jquery-1.11.1.min.js"></script>
+
+	<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+	<script type="module">
+		import { appConfig } from './constant/appConfig.js';
+		var OneSignal = window.OneSignal || [];
+		OneSignal.push(function () {
+			OneSignal.init({
+				appId: appConfig.OneSignalAppId,
+				subdomainName: appConfig.SubdomainName,
+				notifyButton: {
+					enable: true,
+				}
+			});
+			OneSignal.on('notificationDisplay', function (event) {
+				alert(event.content);
+				//console.log(event);
+			});
+			OneSignal.setSubscription(true);
+		});
+	</script>
 	<script type="text/javascript" src="./js/moment.js"></script>
 	<script type="module" src="./index.js"></script>
 	<!-- //js -->
@@ -121,7 +140,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script src="js/jquery.vide.min.js"></script>
 
 	<div class="text-center margin-top-20" id="btnStatuses">
-		
+
 	</div>
 
 	<!--content-->
