--- a/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket.html
@@ -11,6 +11,7 @@
     <link href="../css/jquery-ui.css" rel="stylesheet">
     <link href="../css/rt-style.css" rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="../css/bootstrap-datetimepicker.css" />
+    <link rel="manifest" href="/manifest.json">
     <style>
         ::placeholder {
             color: #999;
@@ -44,10 +45,30 @@
     <script src="../helper/convertStatus.js"></script>
     <script src="../js/numeral.min.js"></script>
     <script src="../js/bootstrap-datetimepicker.min.js"></script>
+    
+	<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+	<script type="module">
+		import {appConfig} from './constant/appConfig.js';
+		var OneSignal = window.OneSignal || [];
+		OneSignal.push(function () {
+			OneSignal.init({
+				appId: appConfig.OneSignalAppId,
+				subdomainName: appConfig.SubdomainName,
+				notifyButton: {
+					enable: true,
+				}
+			});
+			OneSignal.on('notificationDisplay', function (event) {
+				alert(event.content);
+				//console.log(event);
+			});
+		});
+    </script>
+    <script src="./postedTicket.js" type="text/babel"></script>
+    <script src="../helper/Api.js"></script>
     <!-- //js -->
 </head>
-<script src="./postedTicket.js" type="text/babel"></script>
-<script src="../helper/Api.js"></script>
+
 
 <body onload=getTicketDetail()>
     <div class="header">
