--- a/Web/ResellTicketSolution/WebClient.Customer/updateProfile.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/updateProfile.html
@@ -10,62 +10,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <head>
     <title>Big store a Ecommerce Online Shopping Category Flat Bootstrap Responsive Website Template | Register ::
         w3layouts</title>
-    <!-- for-mobile-apps -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta property="og:title" content="Vide" />
-    <meta name="keywords" content="Big store Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
-    <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
-function hideURLbar(){ window.scrollTo(0,1); } </script>
-    <!-- //for-mobile-apps -->
     <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
-    <!-- Custom Theme files -->
     <link href="css/style.css" rel='stylesheet' type='text/css' />
-    <!-- js -->
-    <script src="js/jquery-1.11.1.min.js"></script>
-    <!-- //js -->
-    <!-- start-smoth-scrolling -->
-    <script type="text/javascript" src="js/move-top.js"></script>
-    <script type="text/javascript" src="js/easing.js"></script>
-    <script type="text/javascript">
-        jQuery(document).ready(function ($) {
-            $(".scroll").click(function (event) {
-                event.preventDefault();
-                $('html,body').animate({ scrollTop: $(this.hash).offset().top }, 1000);
-            });
-        });
-    </script>
-    <!-- start-smoth-scrolling -->
     <link href="css/font-awesome.css" rel="stylesheet">
-    <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-    <link href='//fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
-    <!--- start-rate---->
-    <script src="js/jstarbox.js"></script>
     <link rel="stylesheet" href="css/jstarbox.css" type="text/css" media="screen" charset="utf-8" />
-    <script type="text/javascript">
-        jQuery(function () {
-            jQuery('.starbox').each(function () {
-                var starbox = jQuery(this);
-                starbox.starbox({
-                    average: starbox.attr('data-start-value'),
-                    changeable: starbox.hasClass('unchangeable') ? false : starbox.hasClass('clickonce') ? 'once' : true,
-                    ghosting: starbox.hasClass('ghosting'),
-                    autoUpdateAverage: starbox.hasClass('autoupdate'),
-                    buttons: starbox.hasClass('smooth') ? false : starbox.attr('data-button-count') || 5,
-                    stars: starbox.attr('data-star-count') || 5
-                }).bind('starbox-value-changed', function (event, value) {
-                    if (starbox.hasClass('random')) {
-                        var val = Math.random();
-                        starbox.next().text(' ' + val);
-                        return val;
-                    }
-                })
-            });
-        });
-    </script>
-    <script type="text/javascript" src="js/authen.js"></script>
-    <!---//End-rate---->
+    <link rel="manifest" href="/manifest.json">
     <style>
         ::placeholder {
             color: #999;
@@ -83,7 +32,31 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
             color: #999;
         }
     </style>
+    <!-- js -->
+    <script src="js/jquery-1.11.1.min.js"></script>
+    <script src="js/jstarbox.js"></script>
     <script type="text/javascript" src="constant/BasrUrl.js"></script>
+    <script type="text/javascript" src="js/authen.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+    <script type="module">
+        import { appConfig } from './constant/appConfig.js';
+        var OneSignal = window.OneSignal || [];
+        OneSignal.push(function () {
+            OneSignal.init({
+                appId: appConfig.OneSignalAppId,
+                subdomainName: appConfig.SubdomainName,
+                notifyButton: {
+                    enable: true,
+                }
+            });
+            OneSignal.on('notificationDisplay', function (event) {
+                alert(event.content);
+                //console.log(event);
+            });
+        });
+    </script>
+
     <script type="text/javascript">
         async function getCustomerProfile() {
             var usernameDefault = localStorage.getItem("USERNAME");
@@ -108,7 +81,6 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
             }
         }
     </script>
-    
 </head>
 
 <body onload="checkLoginProfile();getCustomerProfile();checkLogin()">
@@ -176,7 +148,8 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
                     <div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
                         <ul class="nav navbar-nav ">
                             <li class="active"><a href="updateProfile.html" class="hyper"><span>Profile</span></a></li>
-                            <li><a href="./postedTicket/postedTicket.html" class="hyper"><span>My Tickets</span></a></li>
+                            <li><a href="./postedTicket/postedTicket.html" class="hyper"><span>My Tickets</span></a>
+                            </li>
                             <li><a href="#" class="hyper"><span>My Routes</span></a></li>
                             <li><a href="#" class="hyper"> <span>My Tours</span></a></li>
                             <li><a href="#" class="hyper"> <span>Credit Card</span></a></li>
@@ -323,8 +296,10 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
                     </div>
                     <button type="button" onclick="updateProfile()" class="btn btn-large btn-block btn-warning">Update
                         Profile</button>
-                    <button type="button" class="btn btn-large btn-block btn-warning"><a href="changePasswordProfile.html">Change
-                        Password</a></button>
+                    <a href="changePasswordProfile.html" style="text-decoration: none;">
+                        <input type="button"
+                            class="btn btn-large btn-block btn-warning" value="Change Password"/>
+                    </a>
                 </form>
             </div>
 
@@ -367,65 +342,8 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
         </div>
     </div>
     <!-- //footer-->
-    <!-- smooth scrolling -->
-    <script type="text/javascript">
-        $(document).ready(function () {
-			/*
-				var defaults = {
-				containerID: 'toTop', // fading element id
-				containerHoverID: 'toTopHover', // fading element hover id
-				scrollSpeed: 1200,
-				easingType: 'linear' 
-				};
-			*/
-            $().UItoTop({ easingType: 'easeOutQuart' });
-        });
-    </script>
     <a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
-    <!-- //smooth scrolling -->
-    <!-- for bootstrap working -->
-    <script src="js/bootstrap.js"></script>
-    <!-- //for bootstrap working -->
-    <script type='text/javascript' src="js/jquery.mycart.js"></script>
-    <script type="text/javascript">
-        $(function () {
-
-            var goToCartIcon = function ($addTocartBtn) {
-                var $cartIcon = $(".my-cart-icon");
-                var $image = $('<img width="30px" height="30px" src="' + $addTocartBtn.data("image") + '"/>').css({ "position": "fixed", "z-index": "999" });
-                $addTocartBtn.prepend($image);
-                var position = $cartIcon.position();
-                $image.animate({
-                    top: position.top,
-                    left: position.left
-                }, 500, "linear", function () {
-                    $image.remove();
-                });
-            }
-
-            $('.my-cart-btn').myCart({
-                classCartIcon: 'my-cart-icon',
-                classCartBadge: 'my-cart-badge',
-                affixCartIcon: true,
-                checkoutCart: function (products) {
-                    $.each(products, function () {
-                        console.log(this);
-                    });
-                },
-                clickOnAddToCart: function ($addTocart) {
-                    goToCartIcon($addTocart);
-                },
-                getDiscountPrice: function (products) {
-                    var total = 0;
-                    $.each(products, function () {
-                        total += this.quantity * this.price;
-                    });
-                    return total * 1;
-                }
-            });
-
-        });
-    </script>
+    
 
 </body>
 
