--- a/Web/ResellTicketSolution/WebClient.Customer/route/routeDetail.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/route/routeDetail.html
@@ -12,26 +12,27 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		w3layouts</title>
 
 	<!-- css -->
-	<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
-	<link href="css/style.css" rel='stylesheet' type='text/css' />
-	<link href="css/font-awesome.css" rel="stylesheet">
+	<link href="./../css/bootstrap.css" rel='stylesheet' type='text/css' />
+	<link href="./../css/style.css" rel='stylesheet' type='text/css' />
+	<link href="./../css/font-awesome.css" rel="stylesheet">
 	<!-- <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-	<link href='//fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'> -->
+		<link href='//fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'> -->
 	<!-- <link rel="stylesheet" href="css/jstarbox.css" type="text/css" media="screen" charset="utf-8" /> -->
-	<link href="css/rt-style.css" rel='stylesheet' type='text/css' />
+	<link href="./../css/rt-style.css" rel='stylesheet' type='text/css' />
 	<!-- css -->
 
 	<!-- js -->
-	<script src="js/jquery-1.11.1.min.js"></script>
-	<script src="js/jstarbox.js"></script>
-	<script type="text/javascript" src="js/authen.js"></script>
-	<script type="text/javascript" src="./js/moment.js"></script>
-    <script src="./js/numeral.min.js"></script>
-	<script type="module" src="./index.js"></script>
+	<script src="./../js/jquery-1.11.1.min.js"></script>
+	<script src="./../js/jstarbox.js"></script>
+	<script type="text/javascript" src="./../js/authen.js"></script>
+	<script type="text/javascript" src="./../js/moment.js"></script>
+    <script src="./../js/numeral.min.js"></script>
+	<script type="module" src="./routeDetail.js"></script>
 	<!-- //js -->
 </head>
 
 <body onload="checkLogin()">
+
 	<div class="header">
 		<div class="container">
 			<div class="logo">
@@ -92,8 +93,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
 						<ul class="nav navbar-nav ">
-							<li class="active"><a href="index.html" class="hyper "><span>Route</span></a></li>
-							<li><a href="codes.html" class="hyper"> <span>Tour</span></a></li>
+							<li class="active"><a href="/index.html" class="hyper "><span>Route</span></a></li>
+							<li><a href="/codes.html" class="hyper"> <span>Tour</span></a></li>
 						</ul>
 					</div>
 				</nav>
@@ -104,34 +105,33 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 	</div>
 	<!---->
-	<div data-vide-bg="images/index-background.png">
+	<!--banner-->
+	<div class="banner-top">
 		<div class="container">
-			<div class="banner-info">
-				<h3 style="color: #c7ad71">It is a long established fact that a reader will be distracted by
-					the readable </h3>
-				<div class="search-form">
-					<input type="submit" value="Search Route" style="color: brown" id="btnSearchRoute">
-				</div>
+			<h3>Route Detail</h3>
+			<h4><a href="./../index.html">Home</a><label>/</label>Route Detail</h4>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+
+	<!-- faqs -->
+	<div class="container">
+		<div class="text-center">
+			<h1 class="margin-top-20 margin-bottom-20"><b id="route-code"></b></h1>
+		</div>
+		<div id="ticket-container">
+
+		</div>
+
+		<div class="row margin-bottom-20">
+			<div class="col-sm-12 text-center">
+				<button class="btn btn-lg btn-warning" id="btn-delete">Delete</button>
+				<button class="btn btn-lg btn-info" id="btn-buy">Buy</button>
 			</div>
 		</div>
 	</div>
 
-	<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
-	<script src="js/jquery.vide.min.js"></script>
-
-	<div class="text-center margin-top-20" id="btnStatuses">
-		
-	</div>
-
-	<!--content-->
-	<div class="content-top" id="route-container">
-	</div>
-
-	<!--content-->
-	<div class="content-mid">
-		<div class="container">
-		</div>
-	</div>
+	
 
 	<!--footer-->
 	<div class="footer">
@@ -171,7 +171,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>
 	<!-- //footer-->
 	<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
-	<script src="js/bootstrap.js"></script>
+	<script src="./../js/bootstrap.js"></script>
+
 </body>
 
 </html>
