--- a/Web/ResellTicketSolution/WebClient.Customer/route/routeUpdate.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/route/routeUpdate.html
@@ -115,10 +115,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>
 
 	<!-- faqs -->
-	<div class="about-w3 ">
+	<div class="container">
+		<div class="text-center">
+			<h1 class="margin-top-20 margin-bottom-20"><b id="route-code"></b></h1>
+		</div>
+		<div id="ticket-container">
 
+		</div>
 
-
+		<div class="row margin-bottom-20">
+			<div class="col-sm-12 text-center">
+				<button class="btn btn-lg btn-warning" id="btn-change-ticket">Change Ticket</button>
+				<button class="btn btn-lg btn-info" id="btn-buy">Buy</button>
+			</div>
+		</div>
 	</div>
 	<!-- // Terms of use -->
 
