RT-092-088: add pagination web admin and fix bug

--- a/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket.html
@@ -247,7 +247,7 @@
                                 <div class="key" style="margin-bottom: 0">
                                     <div class="autocomplete">
                                         <input type="text" placeholder="Arrival City" id="arrivalCity"
-                                            onblur="setArrivalDate()" onkeyup="getArrivalCity()">
+                                            onkeyup="getArrivalCity()">
                                     </div>
                                     <div class="clearfix"></div>
                                 </div>
