--- a/Web/ResellTicketSolution/WebClient.Customer/route/routeDetail.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/route/routeDetail.html
@@ -123,6 +123,31 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 		</div>
 
+		<!-- Modal -->
+    	<div class="modal fade" id="customer-detail-modal" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content modal-lg">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Customer Detail</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="padding-15">
+                        <div id="customer-detail-container" class="padding-5">
+                        </div>
+                    </div>
+                </div>
+					<div class="row margin-bottom-20">
+						<div class="col-sm-12 text-center">
+								<button type="button" class="btn btn-success text-center" data-dismiss="modal" id="btn-confirm">Confirm</button>
+						</div>
+					</div>	
+            </div>
+        </div>
+    	</div>
+
 		<div class="row margin-bottom-20">
 			<div class="col-sm-12 text-center">
 				<button class="btn btn-lg btn-warning" id="btn-delete">Delete</button>
