RT-094: + Enhance Search route algorithm + Add arrival datetime in search route website

--- a/Web/ResellTicketSolution/WebClient.Customer/route/searchRouteForm.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/route/searchRouteForm.html
@@ -143,6 +143,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									</div>	
 								</div>
 							</div>
+							
+							<div class="col-md-6">
+								<div class="form-group">
+									<label class="control-label col-sm-3">Arrival Date</label>
+									<div class="col-sm-9">
+										<input type="text" class="form-control" placeholder="Arrival Date" id="arrivalDate"/>
+									</div>	
+								</div>
+							</div>
+						</div>
+
+						<div class="row">
 							<div class="col-md-6">
 								<div class="form-group">
 									<label class="control-label col-sm-3">Max Tickets</label>
@@ -155,16 +167,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									</div>
 								</div>
 							</div>
-							<!-- <div class="col-md-6">
-								<div class="form-group">
-									<label class="control-label col-sm-3">Arrival Date</label>
-									<div class="col-sm-9">
-										<input type="text" class="form-control" placeholder="Arrival Date" id="arrivalDate"/>
-									</div>	
-								</div>
-							</div> -->
 						</div>
-
 
 						<div class="row">
 							<div class="col-sm-12 text-center">
